@@ -1,5 +1,6 @@
 package com.snnsoluciones.backnathbitpos.config.security;
 
+import com.snnsoluciones.backnathbitpos.config.tenant.TenantFilter;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -12,6 +13,7 @@ import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
+import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
@@ -28,22 +30,14 @@ import java.util.List;
 @EnableMethodSecurity
 @RequiredArgsConstructor
 public class SecurityConfig {
-
-  private final JwtAuthenticationFilter jwtAuthenticationFilter;
-  private final CustomUserDetailsService userDetailsService;
   private final JwtAuthenticationEntryPoint jwtAuthenticationEntryPoint;
+  private final JwtAuthenticationFilter jwtAuthenticationFilter;
+  private final TenantFilter tenantFilter;
+  private final UserDetailsService userDetailsService;
 
   @Bean
   public PasswordEncoder passwordEncoder() {
     return new BCryptPasswordEncoder();
-  }
-
-  @Bean
-  public AuthenticationProvider authenticationProvider() {
-    DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider();
-    authProvider.setUserDetailsService(userDetailsService);
-    authProvider.setPasswordEncoder(passwordEncoder());
-    return authProvider;
   }
 
   @Bean
@@ -52,42 +46,74 @@ public class SecurityConfig {
   }
 
   @Bean
+  public DaoAuthenticationProvider authenticationProvider() {
+    DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider();
+    authProvider.setUserDetailsService(userDetailsService);
+    authProvider.setPasswordEncoder(passwordEncoder());
+    return authProvider;
+  }
+
+  @Bean
   public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
     http
-        .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+        // Deshabilitar CSRF para APIs REST
         .csrf(AbstractHttpConfigurer::disable)
+
+        // Configurar CORS
+        .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+
+        // Configurar manejo de excepciones
         .exceptionHandling(exception -> exception
             .authenticationEntryPoint(jwtAuthenticationEntryPoint)
         )
+
+        // Configurar política de sesiones
         .sessionManagement(session -> session
             .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
         )
-        .authorizeHttpRequests(auth -> auth
-            // Endpoints públicos - IMPORTANTE: auth/login debe ser público
+
+        // Configurar autorización de requests
+        .authorizeHttpRequests(authz -> authz
+            // Rutas públicas - sin autenticación
             .requestMatchers(
-                "/auth/**",           // Sin /api porque el context-path ya lo incluye
-                "/public/**",
-                "/actuator/**",
-                "/v3/api-docs/**",
+                "/api/v2/auth/login",
+                "/api/v2/auth/forgot-password",
+                "/api/v2/auth/reset-password",
+                "/api/v1/auth/login", // Compatibilidad
+                "/api/public/**",
+                "/actuator/health",
                 "/swagger-ui/**",
-                "/swagger-ui.html"
+                "/v3/api-docs/**",
+                "/error"
             ).permitAll()
 
-            // Endpoints de admin
-            .requestMatchers("/admin/**").hasRole("ADMIN")
+            // Rutas que requieren autenticación pero no tenant específico
+            .requestMatchers(
+                "/api/v2/auth/select-context",
+                "/api/v2/auth/refresh",
+                "/api/v2/auth/validate",
+                "/api/v2/auth/logout"
+            ).authenticated()
 
-            // Endpoints de caja
-            .requestMatchers("/caja/abrir", "/caja/cerrar").hasAnyRole("CAJERO", "ADMIN")
-            .requestMatchers("/caja/**").hasAnyRole("CAJERO", "ADMIN")
+            // Rutas administrativas - requieren rol ADMIN o SUPER_ADMIN
+            .requestMatchers("/api/admin/**").hasAnyRole("ADMIN", "SUPER_ADMIN")
 
-            // Endpoints de órdenes
-            .requestMatchers("/ordenes/**").hasAnyRole("MESERO", "CAJERO", "ADMIN")
+            // Rutas de caja - requieren roles específicos
+            .requestMatchers("/api/cajas/**").hasAnyRole("CAJERO", "JEFE_CAJAS", "ADMIN", "SUPER_ADMIN")
 
-            // Todos los demás endpoints requieren autenticación
+            // Rutas de órdenes - múltiples roles
+            .requestMatchers("/api/ordenes/**").hasAnyRole("MESERO", "CAJERO", "JEFE_CAJAS", "ADMIN", "SUPER_ADMIN")
+
+            // Rutas de reportes
+            .requestMatchers("/api/reportes/**").hasAnyRole("JEFE_CAJAS", "ADMIN", "SUPER_ADMIN", "CONTADOR")
+
+            // Cualquier otra ruta requiere autenticación
             .anyRequest().authenticated()
         )
-        .authenticationProvider(authenticationProvider())
-        .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
+
+        // Agregar filtros personalizados
+        .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class)
+        .addFilterAfter(tenantFilter, JwtAuthenticationFilter.class);
 
     return http.build();
   }
@@ -95,14 +121,44 @@ public class SecurityConfig {
   @Bean
   public CorsConfigurationSource corsConfigurationSource() {
     CorsConfiguration configuration = new CorsConfiguration();
-    configuration.setAllowedOrigins(Arrays.asList("http://localhost:3000", "http://localhost:4200", "*"));
-    configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-    configuration.setAllowedHeaders(List.of("*"));
+
+    // Orígenes permitidos
+    configuration.setAllowedOriginPatterns(Arrays.asList(
+        "http://localhost:3000",
+        "http://localhost:5173",
+        "https://*.nathbitpos.com"
+    ));
+
+    // Métodos permitidos
+    configuration.setAllowedMethods(Arrays.asList(
+        "GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"
+    ));
+
+    // Headers permitidos
+    configuration.setAllowedHeaders(Arrays.asList(
+        "Authorization",
+        "Content-Type",
+        "X-Requested-With",
+        "Accept",
+        "Origin",
+        "Access-Control-Request-Method",
+        "Access-Control-Request-Headers",
+        "X-Terminal-Id" // Para detección de terminal
+    ));
+
+    // Headers expuestos
+    configuration.setExposedHeaders(Arrays.asList(
+        "Access-Control-Allow-Origin",
+        "Access-Control-Allow-Credentials",
+        "Authorization"
+    ));
+
     configuration.setAllowCredentials(true);
-    configuration.setExposedHeaders(Arrays.asList("Authorization", "X-Tenant-ID"));
+    configuration.setMaxAge(3600L);
 
     UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
     source.registerCorsConfiguration("/**", configuration);
+
     return source;
   }
 }
